Finish expertise responsive

--- a/front-page.html
+++ b/front-page.html
@@ -58,7 +58,7 @@ permalink: home/
 	<div class="expertise__areas">
 		<div class="expertise__top container">
 			<h2 class="section__title expertise__title">Made to <em>Order</em></h2>
-			<div class="expertise__row">
+			<!-- <div class="expertise__row"> -->
 				<ul class="expertise__column">
 					<li class="expertise__header">Strategy</li>
 					<li class="expertise__item">Research &amp; Analysis</li>
@@ -73,8 +73,8 @@ permalink: home/
 					<li class="expertise__item">Wireframes &amp; Prototypes</li>
 					<li class="expertise__item">Usability Testing</li>
 				</ul>
-			</div>
-			<div class="expertise__row">
+			<!-- </div>
+			<div class="expertise__row"> -->
 				<ul class="expertise__column">
 					<li class="expertise__header">Development</li>
 					<li class="expertise__item">Drupal</li>
@@ -89,7 +89,7 @@ permalink: home/
 					<li class="expertise__item">API Integrations</li>
 					<li class="expertise__item">Content Migration</li>
 				</ul>
-			</div>
+			<!-- </div> -->
 		</div>
 	</div>
 	<div class="expertise__examples">
@@ -100,8 +100,6 @@ permalink: home/
 					<li class="expertise__item">Plugin or Module Development</li>
 					<li class="expertise__item">CMS &amp; Technology Replatforms</li>
 					<li class="expertise__item">Maintenance &amp; Optimization</li>
-				</ul>
-				<ul class="expertise__column">
 					<li class="expertise__item">Project &amp; Program Management</li>
 					<li class="expertise__item">Website Redesigns</li>
 					<li class="expertise__item">Native App Consulting</li>
@@ -205,7 +203,7 @@ permalink: home/
 		<div class="footer__nav__row">
 			<div class="section__label footer__nav__label">Made In <em>Providence</em></div>
 			<div class="footer__nav__image">
-				<img src="http://zento.jp/img/gift/gift_01c.jpg" />
+				<img src="../assets/img/indy-trust-bldg-bw.svg" />
 			</div>
 		</div>
 	</div>
