--- a/front-page.html
+++ b/front-page.html
@@ -180,57 +180,68 @@ permalink: home/
 </section>
 
 <footer id="footer" class="footer">
-	<div class="footer__nav container">
-		<nav class="footer__nav__row">
-			<ul class="footer__nav__column">
-				<li class="footer__nav__categories">Social</li>
-				<li class="footer__nav__links"><a href="" target="_blank">Twitter</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">LinkedIn</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">Facebook</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">GitHub</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">Instagram</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">Google+</a></li>
-			</ul>
-			<ul class="footer__nav__column">
-				<li class="footer__nav__categories">Services</li>
-				<li class="footer__nav__links"><a href="" target="_blank">Strategy &amp; Support</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">Design &amp; UX</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">Development</a></li>
-			</ul>
-			<ul class="footer__nav__column">
-				<li class="footer__nav__categories">Work</li>
-				<li class="footer__nav__links"><a href="" target="_blank">Case Studies</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">Nonprofit</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">Healthcare</a></li>
-			</ul>
-			<ul class="footer__nav__column">
-				<li class="footer__nav__categories">Explore</li>
-				<li class="footer__nav__links"><a href="" target="_blank">Company</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">Blog</a></li>
-				<li class="footer__nav__links"><a href="" target="_blank">Contact Us</a></li>
-			</ul>
-		</nav>
-		<div class="footer__nav__row">
-			<div class="section__label footer__nav__label">Made In <em>Providence</em></div>
-			<div class="footer__nav__image">
-				<img src="../assets/img/indy-trust-bldg-bw.svg" />
+	<div class="footer__top">
+		<div class="footer__nav container">
+			<nav class="footer__nav__row">
+				<ul class="footer__nav__column">
+					<li class="footer__nav__categories">Social</li>
+					<li class="footer__nav__links"><a href="" target="_blank">Twitter</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">LinkedIn</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">Facebook</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">GitHub</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">Instagram</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">Google+</a></li>
+				</ul>
+				<ul class="footer__nav__column">
+					<li class="footer__nav__categories">Services</li>
+					<li class="footer__nav__links"><a href="" target="_blank">Strategy &amp; Support</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">Design &amp; UX</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">Development</a></li>
+				</ul>
+				<ul class="footer__nav__column">
+					<li class="footer__nav__categories">Work</li>
+					<li class="footer__nav__links"><a href="" target="_blank">Case Studies</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">Nonprofit</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">Healthcare</a></li>
+				</ul>
+				<ul class="footer__nav__column">
+					<li class="footer__nav__categories">Explore</li>
+					<li class="footer__nav__links"><a href="" target="_blank">Company</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">Blog</a></li>
+					<li class="footer__nav__links"><a href="" target="_blank">Contact Us</a></li>
+				</ul>
+			</nav>
+			<div class="footer__nav__row">
+				<div class="section__label footer__nav__label">Made In <em>Providence</em></div>
+				<div class="footer__nav__image">
+					<img src="../assets/img/indy-trust-bldg-bw.svg" />
+				</div>
 			</div>
+		</div><!-- .footer__nav -->
+	</div><!-- .footer__top -->
+
+	<div class="footer__mid">
+		<div class="footer__newsletter container">
+			<h2 class="section__title footer__newsletter__title">Insights, News &amp; Case Studies</h2>
+			<p class="footer__newsletter__copy">Sign up to receive regular updates.</p>
+			<form action="">
+				<input type="email" name="email" placeholder="Email address">
+				<button class="button button__primary">Subscribe</button>
+			</form>
 		</div>
 	</div>
 
-	<div class="footer__newsletter container">
-		<h2 class="section__title footer__newsletter__title">Insights, News &amp; Case Studies</h2>
-		<p class="footer__newsletter__copy">Sign up to receive regular updates.</p>
-		<form action="">
-			<input type="email" name="email" placeholder="Email address">
-			<button class="button button__primary">Subscribe</button>
-		</form>
-	</div>
-	<div class="footer__identification container">
-		<img src="../assets/img/oomph_wordmark_red.svg">
-		<p class="footer__identification__copy">&copy; 2017 Oomph Inc.</p>
-		<p class="footer__identification__copy"><a href="tel:401-228-7660">401-228-7660</a></p>
-		<p class="footer__identification__copy"><a href="https://www.google.com/maps/place/Oomph,+Inc./@41.8204071,-71.411847,17z/data=!4m13!1m7!3m6!1s0x89e44514dd89ebbb:0xc5b4c163538c82b1!2s72+Clifford+St,+Providence,+RI+02903!3b1!8m2!3d41.8204071!4d-71.4096583!3m4!1s0x89e44598ae736679:0xa5c7b6e89fc36986!8m2!3d41.820439!4d-71.409723">72 Clifford St., Providence, RI 02903</a></p>
-		<p class="footer__identification__copy"><a href="#">Privacy Policy</a></p>
+	<div class="footer__bottom">
+		<div class="footer__identification container">
+      <div class="footer__identification__logo">
+        <img src="../assets/img/oomph_wordmark_red.svg">
+      </div>
+      <div class="footer__identification__copy">
+        <p class="footer__identification__copy--copyright">&copy; 2017 Oomph Inc.</p>
+        <p class="footer__identification__copy--phone"><a href="tel:401-228-7660">401-228-7660</a></p>
+        <p class="footer__identification__copy--address"><a href="https://www.google.com/maps/place/Oomph,+Inc./@41.8204071,-71.411847,17z/data=!4m13!1m7!3m6!1s0x89e44514dd89ebbb:0xc5b4c163538c82b1!2s72+Clifford+St,+Providence,+RI+02903!3b1!8m2!3d41.8204071!4d-71.4096583!3m4!1s0x89e44598ae736679:0xa5c7b6e89fc36986!8m2!3d41.820439!4d-71.409723">72 Clifford St., Providence, RI 02903</a></p>
+        <p class="footer__identification__copy--privacy"><a href="#">Privacy Policy</a></p>
+      </div>
+		</div>
 	</div>
 </footer>
