Adjustments for expertise area responsive

--- a/front-page.html
+++ b/front-page.html
@@ -32,64 +32,96 @@ permalink: home/
 </section><!-- .banner -->
 
 <section id="recent-work" class="recent-work">
+
 	<div class="section__label recent-work__label">Case Studies</div>
-	<div class="recent-work__showcase container">
-		<h2 class="section__title recent-work__title">Made<br /><em>Recently</em></h2>
-		<h3 class="recent-work__client">Leica Geosystems</h3>
-		<p class="recent-work__copy">
-			A fresh look at Leica's e-commerce experience results in a new way of showcasing products, leading customers to content, and winning the conversation.
-		</p>
+
+	<div class="recent-work__showcase--1 container">
+
+		<div class="recent-work__content">
+			<h2 class="section__title recent-work__title">Made <em>Recently</em></h2>
+			<h3 class="recent-work__client">Leica Geosystems</h3>
+			<p class="recent-work__copy">
+				A fresh look at Leica's e-commerce experience results in a new way of showcasing products, leading customers to content, and winning the conversation.
+			</p>
+		</div>
+
 		<a href="#" class="button button__arrow-right">View More</a>
-		<img src="../assets/img/screens-leica1.png">
-		<img src="../assets/img/web-layout-leica.png">
-	</div>
-	<div class="recent-work__arrow-separator"></div>
-	<div class="recent-work__showcase container">
-		<h3 class="recent-work__client">United Way of Rhode Island</h3>
-		<p class="recent-work__copy">
-			Learn how United Way of Rhode Island transformed the digital experience using user-focused design that's inspiring volunteers.
-		</p>
-		<a href="#" class="button button__arrow-right">View More</a>
-		<img src="../assets/img/screens-leica1.png">
-	</div>
+
+		<div class="recent-work__images--1">
+      <img src="../assets/img/leica-mobile-screenshot.png">
+			<img src="../assets/img/leica-laptop-screenshot.png">
+		</div>
+		<div class="recent-work__images--2">
+			<img src="../assets/img/web-layout-leica.png">
+		</div>
+
+	</div><!-- .recent-work__showcase--1 -->
+
+	<div class="recent-work__arrow-separator">
+    <img src="../assets/img/interactive-arrows.png">
+  </div>
+
+	<div class="recent-work__showcase--2 container">
+
+		<div class="recent-work__content">
+			<h3 class="recent-work__client">United Way of Rhode Island</h3>
+			<p class="recent-work__copy">
+				Learn how United Way of Rhode Island transformed the digital experience using user-focused design that&rsquo;s inspiring volunteers.
+			</p>
+      <a href="#" class="button button__arrow-right">View More</a>
+		</div>
+
+
+		<div class="recent-work__images--3">
+      <div>
+        <img src="../assets/img/uwri-mobile-screenshot.png">
+      </div>
+      <div>
+        <img src="../assets/img/uwri-mobile-screenshot.png">
+      </div>
+      <div>
+        <img src="../assets/img/uwri-mobile-screenshot.png">
+      </div>
+		</div>
+
+  </div><!-- .recent-work__showcase--2 -->
+
+  <div class="recent-work__border"></div>
+
 </section><!-- .recent-work -->
 
 <section id="expertise" class="expertise">
 	<div class="expertise__areas">
 		<div class="expertise__top container">
 			<h2 class="section__title expertise__title">Made to <em>Order</em></h2>
-			<!-- <div class="expertise__row"> -->
-				<ul class="expertise__column">
-					<li class="expertise__header">Strategy</li>
-					<li class="expertise__item">Research &amp; Analysis</li>
-					<li class="expertise__item">SEO</li>
-					<li class="expertise__item">Content Strategy</li>
-					<li class="expertise__item">Analytics &amp; Tracking</li>
-				</ul>
-				<ul class="expertise__column">
-					<li class="expertise__header">Design</li>
-					<li class="expertise__item">Information Architecture</li>
-					<li class="expertise__item">Responsive Design</li>
-					<li class="expertise__item">Wireframes &amp; Prototypes</li>
-					<li class="expertise__item">Usability Testing</li>
-				</ul>
-			<!-- </div>
-			<div class="expertise__row"> -->
-				<ul class="expertise__column">
-					<li class="expertise__header">Development</li>
-					<li class="expertise__item">Drupal</li>
-					<li class="expertise__item">WordPress</li>
-					<li class="expertise__item">eCommerce</li>
-					<li class="expertise__item">Custom Software</li>
-				</ul>
-				<ul class="expertise__column">
-					<li class="expertise__header">Ongoing Support</li>
-					<li class="expertise__item">Security Audits</li>
-					<li class="expertise__item">Performance &amp; Scalability</li>
-					<li class="expertise__item">API Integrations</li>
-					<li class="expertise__item">Content Migration</li>
-				</ul>
-			<!-- </div> -->
+			<ul class="expertise__column">
+				<li class="expertise__header">Strategy</li>
+				<li class="expertise__item">Research &amp; Analysis</li>
+				<li class="expertise__item">SEO</li>
+				<li class="expertise__item">Content Strategy</li>
+				<li class="expertise__item">Analytics &amp; Tracking</li>
+			</ul>
+			<ul class="expertise__column">
+				<li class="expertise__header">Design</li>
+				<li class="expertise__item">Information Architecture</li>
+				<li class="expertise__item">Responsive Design</li>
+				<li class="expertise__item">Wireframes &amp; Prototypes</li>
+				<li class="expertise__item">Usability Testing</li>
+			</ul>
+			<ul class="expertise__column">
+				<li class="expertise__header">Development</li>
+				<li class="expertise__item">Drupal</li>
+				<li class="expertise__item">WordPress</li>
+				<li class="expertise__item">eCommerce</li>
+				<li class="expertise__item">Custom Software</li>
+			</ul>
+			<ul class="expertise__column">
+				<li class="expertise__header">Ongoing Support</li>
+				<li class="expertise__item">Security Audits</li>
+				<li class="expertise__item">Performance &amp; Scalability</li>
+				<li class="expertise__item">API Integrations</li>
+				<li class="expertise__item">Content Migration</li>
+			</ul>
 		</div>
 	</div>
 	<div class="expertise__examples">
@@ -233,15 +265,15 @@ permalink: home/
 
 	<div class="footer__bottom">
 		<div class="footer__identification container">
-      <div class="footer__identification__logo">
-        <img src="../assets/img/oomph_wordmark_red.svg">
-      </div>
-      <div class="footer__identification__copy">
-        <p class="footer__identification__copy--copyright">&copy; 2017 Oomph Inc.</p>
-        <p class="footer__identification__copy--phone"><a href="tel:401-228-7660">401-228-7660</a></p>
-        <p class="footer__identification__copy--address"><a href="https://www.google.com/maps/place/Oomph,+Inc./@41.8204071,-71.411847,17z/data=!4m13!1m7!3m6!1s0x89e44514dd89ebbb:0xc5b4c163538c82b1!2s72+Clifford+St,+Providence,+RI+02903!3b1!8m2!3d41.8204071!4d-71.4096583!3m4!1s0x89e44598ae736679:0xa5c7b6e89fc36986!8m2!3d41.820439!4d-71.409723">72 Clifford St., Providence, RI 02903</a></p>
-        <p class="footer__identification__copy--privacy"><a href="#">Privacy Policy</a></p>
-      </div>
+			<div class="footer__identification__logo">
+				<img src="../assets/img/oomph_wordmark_red.svg">
+			</div>
+			<div class="footer__identification__copy">
+				<p class="footer__identification__copy--copyright">&copy; 2017 Oomph Inc.</p>
+				<p class="footer__identification__copy--phone"><a href="tel:401-228-7660">401-228-7660</a></p>
+				<p class="footer__identification__copy--address"><a href="https://www.google.com/maps/place/Oomph,+Inc./@41.8204071,-71.411847,17z/data=!4m13!1m7!3m6!1s0x89e44514dd89ebbb:0xc5b4c163538c82b1!2s72+Clifford+St,+Providence,+RI+02903!3b1!8m2!3d41.8204071!4d-71.4096583!3m4!1s0x89e44598ae736679:0xa5c7b6e89fc36986!8m2!3d41.820439!4d-71.409723">72 Clifford St., Providence, RI 02903</a></p>
+				<p class="footer__identification__copy--privacy"><a href="#">Privacy Policy</a></p>
+			</div>
 		</div>
 	</div>
 </footer>
