--- a/front-page.html
+++ b/front-page.html
@@ -13,11 +13,6 @@ permalink: home/
 			<ul class="main-navigation__menus--desktop">
 				<li class="main-navigation__menus--desktop--menu-item">
 					<a href="">Services</a>
-					<ul class="submenu-navigation__menu">
-						<li class="submenu-navigation__menu-item"><a href="">Strategy &amp; Support</a></li>
-						<li class="submenu-navigation__menu-item"><a href="">Design &amp; UX</a></li>
-						<li class="submenu-navigation__menu-item"><a href="">Development</a></li>
-					</ul>
 				</li>
 				<li class="main-navigation__menus--desktop--menu-item"><a href="">Work</a></li>
 				<li class="main-navigation__menus--desktop--menu-item"><a href="">Company</a></li>
@@ -25,6 +20,7 @@ permalink: home/
 				<li class="main-navigation__menus--desktop--menu-item"><a href="">Contact</a></li>
 			</ul>
 			<a class="main-navigation__menus--mobile"><i class="fa fa-bars"></i></a>
+      <a class="main-navigation__menus--mobile"><i class="fa fa-times"></i></a>
 		</div>
 	</div><!-- .navigation container -->
 </header>
