Deconstruct after design changes

--- a/contact-page.html
+++ b/contact-page.html
@@ -38,33 +38,19 @@ permalink: contact/
 </section><!-- .banner -->
 
 <section class="lead-in">
-  <div class="section__label lead-in__label">So What&rsquo;s Next</div>
+  <div class="section__label lead-in__label">What&rsquo;s Next</div>
   <div class="lead-in container">
 
-    <div class="lead-in__social__wrapper">
-      <ul class="lead-in__social">
-        <li class="lead-in__social__links"><a href="" target="_blank">Twitter</a></li>
-        <li class="lead-in__social__links"><a href="" target="_blank">LinkedIn</a></li>
-        <li class="lead-in__social__links"><a href="" target="_blank">Facebook</a></li>
-        <li class="lead-in__social__links"><a href="" target="_blank">GitHub</a></li>
-        <li class="lead-in__social__links"><a href="" target="_blank">Instagram</a></li>
-        <li class="lead-in__social__links"><a href="" target="_blank">Google+</a></li>
-      </ul>
+    <div class="lead-in__contact__wrapper">
+      <a href="tel:1-401-228-7660">+1 401-228-7660</a>
+      <a href="mailto:support@oomphinc.com">support@oomphinc.com</a>
     </div>
 
     <div class="lead-in__content__wrapper">
       <h2 class="lead-in__headline">Contact Us</h2>
       <p class="lead-in__copy">
-        Oomph works best when we work together. Tell us a little now and let&rsquo;s start a conversation about your product.<br /><br />
-        <a href="https://www.google.com/maps/place/Oomph,+Inc./@41.8204071,-71.411847,17z/data=!4m13!1m7!3m6!1s0x89e44514dd89ebbb:0xc5b4c163538c82b1!2s72+Clifford+St,+Providence,+RI+02903!3b1!8m2!3d41.8204071!4d-71.4096583!3m4!1s0x89e44598ae736679:0xa5c7b6e89fc36986!8m2!3d41.820439!4d-71.409723">72 Clifford St., Providence, RI 02903<br />
-        <a href="tel:1-401-228-7660">+1 401-228-7660</a>
+        Oomph works best when we work together. Tell us a little now and let&rsquo;s start a conversation about your product.
       </p>
-      <h3 class="lead-in__subhead">How can we help?</h3>
-      <div class="lead-in__buttons">
-        <a href="" class="button button__primary">Project Planner</a>
-        <em>or</em>
-        <a href="" class="button button__primary">Client Support</a>
-      </div>
     </div>
 
   </div><!-- .lead-in__container -->
@@ -87,17 +73,6 @@ permalink: contact/
       <input type="text" id="company-type" name="company-type" />
     </form>
   </div><!-- .contact-form container -->
-</section>
-
-<section class="lead-out">
-  <div class="lead-out container">
-    <h2 class="lead-out__headline"><em>Client Support</em></h2>
-    <p class="lead-out__copy">
-      Our clients can contact this team directly by phone during business hours or via a dedicated support email address from 9am - 6pm Monday to Friday.
-    </p>
-    <a href="tel:1-401-228-7660" class="lead-out__phone">+1 401-228-7660</a>
-    <a href="mailto:support@oomphinc.com" class="button button__primary">support@oomphinc.com</a>
-  </div><!-- .lead-out container -->
 </section>
 
 <footer id="footer" class="footer">
