Style form, refactor

--- a/contact-page.html
+++ b/contact-page.html
@@ -60,17 +60,39 @@ permalink: contact/
   <div class="section__label contact-form__label">Project Planner</div>
   <div class="contact-form container">
     <h2 class="contact-form__headline">Tell Us About Your Project</h2>
-    <form class="contact-form__panel-1">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" />
-      <label for="email">Email</label>
-      <input type="text" id="email" name="email" />
-      <label for="phone">Phone</label>
-      <input type="text" id="phone" name="phone" />
-      <label for="name">Company</label>
-      <input type="text" id="company" name="company" />
-      <label for="company-type">What Does Your Company Do?</label>
-      <input type="text" id="company-type" name="company-type" />
+    <p class="contact-form__copy">
+      We offer clients an open, collective partnership built on real human chemistry.
+    </p>
+    <form class="contact-form__project-planner" method="post">
+      <div class="contact-form__project-planner__column-1">
+        <label for="name">Name <span class="required">*</span></label>
+        <input type="text" id="name" name="name" required />
+        <label for="email">Email <span class="required">*</span></label>
+        <input type="text" id="email" name="email" required />
+      </div>
+      <div class="contact-form__project-planner__column-2">
+        <label for="organization">Organization <span class="required">*</span></label>
+        <input type="text" id="organization" name="organization" required />
+        <label for="phone">Phone <span class="required">*</span></label>
+        <input type="text" id="phone" name="phone" required />
+      </div>
+      <div class="contact-form__project-planner__column-3">
+        <label for="goals">Project Goals</label>
+        <select id="goals" name="goals">
+          <option>SELECT</option>
+          <option value="">Option 1</option>
+          <option value="">Option 2</option>
+          <option value="">Option 3</option>
+          <option value="">Option 4</option>
+        </select>
+      </div>
+      <div class="contact-form__project-planner__column-4">
+        <label for="extra-info">Anything Else We Should Know?</label>
+        <textarea id="extra-info" name="extra-info"></textarea>
+      </div>
+      <div class="contact-form__project-planner__column-5">
+        <button class="button button__primary">Start a Conversation</button>
+      </div>
     </form>
   </div><!-- .contact-form container -->
 </section>
