Adjustments for responsive

--- a/contact-page.html
+++ b/contact-page.html
@@ -41,16 +41,16 @@ permalink: contact/
   <div class="section__label lead-in__label">What&rsquo;s Next</div>
   <div class="lead-in container">
 
-    <div class="lead-in__contact__wrapper">
-      <a href="tel:1-401-228-7660">+1 401-228-7660</a>
-      <a href="mailto:support@oomphinc.com">support@oomphinc.com</a>
-    </div>
-
     <div class="lead-in__content__wrapper">
       <h2 class="lead-in__headline">Contact Us</h2>
       <p class="lead-in__copy">
         Oomph works best when we work together. Tell us a little now and let&rsquo;s start a conversation about your product.
       </p>
+    </div>
+
+    <div class="lead-in__contact__wrapper">
+      <a href="tel:1-401-228-7660">+1 401-228-7660</a>
+      <a href="mailto:support@oomphinc.com">support@oomphinc.com</a>
     </div>
 
   </div><!-- .lead-in__container -->
@@ -63,6 +63,7 @@ permalink: contact/
     <p class="contact-form__copy">
       We offer clients an open, collective partnership built on real human chemistry.
     </p>
+
     <form class="contact-form__project-planner" method="post">
       <div class="contact-form__project-planner__column-1">
         <label for="name">Name <span class="required">*</span></label>
@@ -93,9 +94,10 @@ permalink: contact/
       <div class="contact-form__project-planner__column-5">
         <button class="button button__primary">Start a Conversation</button>
       </div>
-    </form>
+    </form><!-- .contact-form__project-planner -->
+    
   </div><!-- .contact-form container -->
-</section>
+</section><!-- .contact-form -->
 
 <footer id="footer" class="footer">
   <div class="footer__top">
