Restyle banner with alternate svg

--- a/contact-page.html
+++ b/contact-page.html
@@ -25,18 +25,16 @@ permalink: contact/
   </div><!-- .navigation container -->
 </header>
 
-<section class="banner" role="banner">
-  <div class="banner__image__wrapper">
+<section class="banner__contact" role="banner">
+  <div class="banner__contact__image__wrapper">
     <img src="../assets/img/make-it-great.jpg" alt="Unsplash">
   </div>
-  <div class="banner__header container">
+  <div class="banner__contact__header container">
     <h1 class="section__title banner__title">Let&rsquo;s make something <em>Great</em></h1>
   </div>
-  <div class="banner__svg">
-    <div class="banner__svg__inner">
-    </div>
+  <div class="banner__contact__svg">
+    <img src="../assets/img/oomph-jewel-render-alt.svg">
   </div>
-  <div class="banner__svg__follow"></div>
 </section><!-- .banner -->
 
 <section class="lead-in">
