Add in map, style

--- a/contact-page.html
+++ b/contact-page.html
@@ -101,6 +101,17 @@ permalink: contact/
   </div><!-- .contact-form container -->
 </section><!-- .contact-form -->
 
+<section class="map">
+  <div class="map__image-wrapper">
+    <div class="map__image"></div>
+  </div>
+  <div class="map__address-card">
+    <p class="map__address-card--line1">Oomph</p>
+    <p class="map__address-card--line2">72 Clifford St.</p>
+    <p class="map__address-card--line3">Providence, RI 02903</p>
+  </div>
+</section>
+
 <footer id="footer" class="footer">
   <div class="footer__top">
     <div class="footer__nav container">
