Cleanup and notes

--- a/contact-page.html
+++ b/contact-page.html
@@ -4,10 +4,13 @@ nav-title: Contact
 permalink: contact/
 ---
 
+<!-- Use existing header and footer from completed front page -->
+<!-- The rest is unique to this page, including the banner -->
+
 <header id="navigation" class="navigation">
   <div class="main-navigation container">
     <div class="main-navigation__logo">
-      <a href="#"><img src="../assets/img/oomph_wordmark_white.svg"></a>
+      <a href="#"><img src="../assets/img/oomph_wordmark_white.svg" alt="Oomph wordmark in white"></a>
     </div>
     <div class="main-navigation__menus">
       <ul class="main-navigation__menus--desktop">
@@ -27,13 +30,13 @@ permalink: contact/
 
 <section class="banner__contact" role="banner">
   <div class="banner__contact__image__wrapper">
-    <img src="../assets/img/make-it-great.jpg" alt="Unsplash">
+    <img src="../assets/img/make-it-great.jpg" alt="Photo of man (face not shown) in green sweater working on laptop">
   </div>
   <div class="banner__contact__header container">
     <h1 class="section__title banner__title">Let&rsquo;s make something <em>Great</em></h1>
   </div>
   <div class="banner__contact__svg">
-    <img src="../assets/img/oomph-jewel-render-alt.svg">
+    <img src="../assets/img/oomph-jewel-render-alt.svg" alt="Decorative graphic element in shades of red">
   </div>
 </section><!-- .banner -->
 
@@ -48,8 +51,8 @@ permalink: contact/
     </div>
 
     <div class="lead-in__contact__wrapper">
-      <a href="tel:1-401-228-7660">+1 401-228-7660</a>
-      <a href="mailto:support@oomphinc.com">support@oomphinc.com</a>
+      <a href="tel:14012287660" title="Oomph Inc telephone number">+1 401-228-7660</a>
+      <a href="mailto:support@oomphinc.com" title="Oomph Inc's support email">support@oomphinc.com</a>
     </div>
 
   </div><!-- .lead-in__container -->
@@ -58,7 +61,7 @@ permalink: contact/
 <section class="contact-form">
   <div class="section__label contact-form__label">Project Planner</div>
   <div class="contact-form container">
-    <h2 class="contact-form__headline">Tell Us About Your Project</h2>
+    <h1 class="contact-form__headline">Tell Us About Your Project</h1>
     <p class="contact-form__copy">
       We offer clients an open, collective partnership built on real human chemistry.
     </p>
@@ -146,7 +149,7 @@ permalink: contact/
       </nav>
       <div class="footer__nav__row">
         <div class="footer__nav__image">
-          <img src="../assets/img/indy-trust-bldg-bw.svg" class="building-graphic" />
+          <img src="../assets/img/indy-trust-bldg-bw.svg" class="building-graphic" alt="Graphic depicting Providence's Industrial Trust building" />
         </div>
       </div>
     </div><!-- .footer__nav -->
@@ -166,12 +169,12 @@ permalink: contact/
   <div class="footer__bottom">
     <div class="footer__identification container">
       <div class="footer__identification__logo">
-        <img src="../assets/img/oomph_wordmark_red.svg">
+        <img src="../assets/img/oomph_wordmark_red.svg" alt="Oomph wordmark in red">
       </div>
       <div class="footer__identification__copy">
         <p class="footer__identification__copy--copyright">&copy; 2017 Oomph Inc.</p>
-        <p class="footer__identification__copy--phone"><a href="tel:401-228-7660">401-228-7660</a></p>
-        <p class="footer__identification__copy--address"><a href="https://www.google.com/maps/place/Oomph,+Inc./@41.8204071,-71.411847,17z/data=!4m13!1m7!3m6!1s0x89e44514dd89ebbb:0xc5b4c163538c82b1!2s72+Clifford+St,+Providence,+RI+02903!3b1!8m2!3d41.8204071!4d-71.4096583!3m4!1s0x89e44598ae736679:0xa5c7b6e89fc36986!8m2!3d41.820439!4d-71.409723">72 Clifford St., Providence, RI 02903</a></p>
+        <p class="footer__identification__copy--phone"><a href="tel:401-228-7660" name="Oomph Inc telephone number">401-228-7660</a></p>
+        <p class="footer__identification__copy--address"><a href="https://www.google.com/maps/place/Oomph,+Inc./@41.8204071,-71.411847,17z/data=!4m13!1m7!3m6!1s0x89e44514dd89ebbb:0xc5b4c163538c82b1!2s72+Clifford+St,+Providence,+RI+02903!3b1!8m2!3d41.8204071!4d-71.4096583!3m4!1s0x89e44598ae736679:0xa5c7b6e89fc36986!8m2!3d41.820439!4d-71.409723" name="Oomph Inc's address">72 Clifford St., Providence, RI 02903</a></p>
         <p class="footer__identification__copy--privacy"><a href="#">Privacy Policy</a></p>
       </div>
     </div>
