Replace stock photo

--- a/contact-page.html
+++ b/contact-page.html
@@ -30,7 +30,7 @@ permalink: contact/
 
 <section class="banner__contact" role="banner">
   <div class="banner__contact__image__wrapper">
-    <img src="../assets/img/make-it-great.jpg" alt="Photo of man (face not shown) in green sweater working on laptop">
+    <img src="../assets/img/contact-page-hero.jpg" alt="Photo of man, arms and torso only, in red and black flannel, sleeves half rolled up, working on laptop">
   </div>
   <div class="banner__contact__header container">
     <h1 class="section__title banner__title">Let&rsquo;s make something <em>Great</em></h1>
