Change style on address card

--- a/contact-page.html
+++ b/contact-page.html
@@ -33,7 +33,7 @@ permalink: contact/
     <img src="../assets/img/contact-page-hero.jpg" alt="Photo of man, arms and torso only, in red and black flannel, sleeves half rolled up, working on laptop">
   </div>
   <div class="banner__contact__header container">
-    <h1 class="section__title banner__title">Let&rsquo;s make something <em>Great</em></h1>
+    <h1 class="section__title banner__title">Let&rsquo;s make it <em>Together</em></h1>
   </div>
   <div class="banner__contact__svg">
     <img src="../assets/img/oomph-jewel-render-alt.svg" alt="Decorative graphic element in shades of red">
